--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ body {
   right: 1%;
   top: 1%;
   width:270px;
-  height: 98vh;
+  height: 100vh;
 }
 
 #topLeftUI {
@@ -112,4 +112,22 @@ body {
 
 .flex-item {
   min-width: 0;
+  min-height: 0;
+}
+
+.panel-body {
+  padding: 5px;
+  border-color: #cccccc;
+  background-color: #ffffff;
+}
+
+.panel-heading {
+  padding: 5px;
+  border-color: #cccccc;
+  background-color: #eeeeee;
+  font-weight: bold;
+}
+
+.fullWidth {
+  width: 100%;
 }
