--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div id='topLeftUI'>
       
       <div class='panel panel-default'>
-        <div class='panel-body'>
+        <div class='panel-body information-panel'>
 
           <div>
             User: 
@@ -42,7 +42,7 @@
 
      
 
-      <div class="input-group input-group-sm">
+      <div class="input-group input-group-md">
 
         <span class="input-group-addon">Robot</span>
         
@@ -160,7 +160,7 @@
 
       </div>
 
-      <div class="input-group input-group-sm">
+      <div class="input-group input-group-md">
 
         <span class="input-group-addon">Scan Size</span>
         
