fixed select corners in osx chrome

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
 
         <span class="input-group-addon">Robot</span>
         
-        <select id='robotSelect' class='form-control'></select>
+        <select id='robotSelect' class='form-control input-group-select'></select>
 
       </div>
 
@@ -164,7 +164,7 @@
 
         <span class="input-group-addon">Scan Size</span>
         
-        <select id='scanLevelSelect' class='form-control'>
+        <select id='scanLevelSelect' class='form-control input-group-select'>
           <option value='0'>None</option>
           <option value='1' selected>Small</option>
           <option value='2'>Big</option>
