--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,6 +123,13 @@ body {
   background-color: #f5f5f5;
 }
 
+.input-group-select {
+  /* rounded corner fix for osx chrome */
+  border: 0;
+  outline: 1px solid #CCC;
+  outline-offset: -1px;
+}
+
 /* bootstrap modifications */
 
 .panel-default {
@@ -142,4 +149,6 @@ body {
 .input-group-addon {
   background-color: #f5f5f5;
   font-weight: bold;
+  padding: 5px;
+  color: #333333;
 }
