command input now hidden unless robot sends the right message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -177,8 +177,8 @@
       <div class='panel panel-default fullWidth flex-item flex-col'>
         <div class='panel-heading fullWidth'>Command History</div>
         <div class='panel-body fullWidth flex-item flex-col'>
-          <input type='text' id='commandInput'></input>
-          <span id='runInTerminalDiv'><input type='checkbox' id='runInTerminal'></input> Run in Terminal</span>
+          <input type='text' id='commandInput' class='hidden'></input>
+          <span id='runInTerminalDiv' class='hidden'><input type='checkbox' id='runInTerminal'></input> Run in Terminal</span>
           <div id='messageContainer'></div>
         </div>
       </div>
