power display isn't shown until a robot sends its power level

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
             <span id='hoverGuideCoordinates'></span>
           </div>
 
-          <div  id='powerLevelDisplay'>
+          <div id='powerLevelDisplay' class='hidden'>
             Power: 
             <span id='powerLevel'></span>
           </div>
