working on controls display

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,22 @@
   </head>
   <body>
 
+    <div class="modal show bs-example-modal-lg">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Controls</h4>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div id='topLeftUI'>
       
       <div class='panel panel-default'>
