hotkey for controls modal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div class="modal show bs-example-modal-lg">
+    <div id='controlsDisplay' class="modal bs-example-modal-lg">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
