--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,39 @@
             <h4 class="modal-title">Controls</h4>
           </div>
           <div class="modal-body">
-            ...
+            <table>
+              <tr>
+                <td>
+                  Pan Camera
+                </td>
+                <td>
+                  WASD
+                </td>
+                <td>
+                  ↑↓←→
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Raise Camera
+                </td>
+                <td>
+                  Space
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Lower Camera
+                </td>
+                <td>
+                  Shift
+                </td>
+                <td>
+                </td>
+              </tr>
+            </table>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
