--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,38 +16,13 @@
             <h4 class="modal-title">Controls</h4>
           </div>
           <div class="modal-body">
-            <table>
-              <tr>
-                <td>
-                  Pan Camera
-                </td>
-                <td>
-                  WASD
-                </td>
-                <td>
-                  ↑↓←→
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Raise Camera
-                </td>
-                <td>
-                  Space
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Lower Camera
-                </td>
-                <td>
-                  Shift
-                </td>
-                <td>
-                </td>
-              </tr>
+            <table class='table'>
+              <tr><th>Function</th><th>Primary Key</th><th>Alternate Key</tr>
+              <tr><th>Show/Hide Controls</th><th>?</th><th>Shift + /</tr>
+              <tr><td>Lower Cursor</td><td>Ctrl</td><td>Alt</td></tr>
+              <tr><td>Pan Camera</td><td>WASD</td><td>↑↓←→</td></tr>
+              <tr><td>Raise Camera</td><td>Space</td><td></td></tr>
+              <tr><td>Lower Camera</td><td>Shift</td><td></td></tr>
             </table>
           </div>
           <div class="modal-footer">
