--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,11 +17,12 @@
           </div>
           <table class="table modal-body">
             <tr><th>Function</th><th>Primary Key</th><th>Alternate Key</tr>
-            <tr><th>Show/Hide Controls</th><th>?</th><th>Shift + /</tr>
+            <tr><td>Show/Hide Controls</td><td>?</td><td>Shift + /</tr>
             <tr><td>Lower Cursor</td><td>Ctrl</td><td>Alt</td></tr>
             <tr><td>Pan Camera</td><td>WASD</td><td>↑↓←→</td></tr>
             <tr><td>Raise Camera</td><td>Space</td><td></td></tr>
             <tr><td>Lower Camera</td><td>Shift</td><td></td></tr>
+            <tr><td>Split Item Stack</td><td>Ctrl + Drag and Drop</td><td>Alt + Drag and Drop</td></tr>
           </table>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
