bug fixes and investigation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ body {
 .input {
   background-color: #337ab7;
   border: 1px solid #2e6da4;
+  cursor: pointer;
 }
 .input:hover {
   background-color: #286090;
