--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
 
     <div id='topLeftUI'>
       
-      <div class='panel panel-default'>
+      <div class='panel panel-default inline-block'>
         <div class='panel-body information-panel'>
 
           <div id='usernameDisplay'>
@@ -52,6 +52,11 @@
           </div>
 
         </div>
+      </div>
+
+      <div class="alert alert-success alert-dismissable">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+        <span id='bannerMessage'></span>
       </div>
 
     </div>
@@ -230,6 +235,7 @@
     <script type='text/javascript' src='/js/interface.js'></script>
 		<script src='/js/buttons.js'></script>
 		<script src='/js/tooltips.js'></script>
+		<script src='/js/message.js'></script>
 
   </body>
 </html>
