made the message banner load in a prettier way

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,9 +54,9 @@
         </div>
       </div>
 
-      <div class="alert alert-success alert-dismissable">
+      <div id='bannerMessageDiv' class="alert alert-success alert-dismissable hidden">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-        <span id='bannerMessage'></span>
+        <span id='bannerMessage' ></span>
       </div>
 
     </div>
