added item transfer modal working on replacing prompt, because it's not supported by electron

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,20 @@
       </div>
     </div>
 
+    <div id='itemTransferAmountInput' class="modal">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Amount to Transfer</h5>
+        </div>
+        <div class='modal-body'>
+          <input type='number'></input>
+          <button id='transferButton'>Transfer</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <div id='topLeftUI'>
       
       <div class='panel panel-default inline-block'>
