preparing to make inventory code work with modal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
 
           <div class='input-group input-group-sm'>
             
-            <input class='form-control' type='number' min='0' max='64'></input>
+            <input id='transferAmountInput' class='form-control' type='number' min='0' max='64'></input>
 
             <span class='input-group-btn'>
               <button class='btn btn-primary' type='button' id='transferButton'>Transfer</button>
