renamed for clarity

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div id='itemTransferAmountInput' class="modal">
+    <div id='itemTransferAmountModal' class="modal">
     <div class="modal-dialog modal-sm">
       <div class="modal-content">
         <div class="modal-header">
