--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,15 +39,17 @@
         </div>
         <div class='modal-body'>
 
-          <div class='input-group input-group-sm'>
-            
-            <input id='transferAmountInput' class='form-control' type='number' min='0' max='64'></input>
+          <form id='itemTransferAmountForm' onsubmit='return false;'>
+            <div class='input-group input-group-sm'>
+              
+              <input id='transferAmountInput' class='form-control' type='number' min='0' max='64'></input>
 
-            <span class='input-group-btn'>
-              <button class='btn btn-primary' type='button' id='transferButton'>Transfer</button>
-            </span>
+              <span class='input-group-btn'>
+                <button class='btn btn-primary' type='button' id='transferButton'>Transfer</button>
+              </span>
 
-          </div>
+            </div>
+          </form>
 
         </div>
       </div>
@@ -234,6 +236,8 @@
       </div>
 
     </div>
+
+    <script>var GLOBALS = {}</script>
 
     <!-- Insert this line above script imports to fix electron import path for jquery -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
