clicking button or pressing enter both work now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
               <input id='transferAmountInput' class='form-control' type='number' min='0' max='64'></input>
 
               <span class='input-group-btn'>
-                <button class='btn btn-primary' type='button' id='transferButton'>Transfer</button>
+                <button class='btn btn-primary' id='transferButton'>Transfer</button>
               </span>
 
             </div>
