robot unselected on disconnect

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -98,7 +98,9 @@
 
         <span class="input-group-addon">Robot</span>
         
-        <select id='robotSelect' class='form-control input-group-select'></select>
+        <select id='robotSelect' class='form-control input-group-select'>
+          <option value='' selected></option>
+        </select>
 
       </div>
 
