--- a/views/index.ejs
+++ b/views/index.ejs
@@ -249,25 +249,25 @@
 		<script src='/js/lib/PointerLockControls.js'></script>
     <script src='/js/lib/socket.io.js'></script>
 
-		<script src='/js/WorldAndScenePoint.js'></script>
-		<script src='/js/Robot.js'></script>
-		<script src='/js/VoxelMap.js'></script>
-		<script src='/js/CoordForm.js'></script>
-		<script src='/js/CutawayForm.js'></script>
-		<script src='/js/map.js'></script>
+		<script src='/js/client/WorldAndScenePoint.js'></script>
+		<script src='/js/client/Robot.js'></script>
+		<script src='/js/client/VoxelMap.js'></script>
+		<script src='/js/client/CoordForm.js'></script>
+		<script src='/js/client/CutawayForm.js'></script>
+		<script src='/js/client/map.js'></script>
 
-    <script type='text/javascript' src='/js/fetchPromise.js'></script>
-    <script type='text/javascript' src='/js/recipeSearch.js'></script>
-    <script type='text/javascript' src='/js/Inventory.js'></script>
+    <script type='text/javascript' src='/js/client/fetchPromise.js'></script>
+    <script type='text/javascript' src='/js/server/recipeSearch.js'></script>
+    <script type='text/javascript' src='/js/client/Inventory.js'></script>
 
     <script src='/js/lib/jquery-3.1.1.min.js'></script>
 		<script src='/js/lib/bootstrap.min.js'></script>
 		<script src='/js/lib/bootstrap-select.min.js'></script>
 
-    <script type='text/javascript' src='/js/interface.js'></script>
-		<script src='/js/buttons.js'></script>
-		<script src='/js/tooltips.js'></script>
-		<script src='/js/message.js'></script>
+    <script type='text/javascript' src='/js/client/interface.js'></script>
+		<script src='/js/client/buttons.js'></script>
+		<script src='/js/client/tooltips.js'></script>
+		<script src='/js/client/message.js'></script>
 
     <!-- Insert this line after script imports to fix electron import path for jquery -->
     <script>if (window.module) module = window.module;</script>
