three.min.js added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -244,8 +244,7 @@
     <!-- Insert this line above script imports to fix electron import path for jquery -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 
-    <script src='/js/lib/three.js-master/build/three.js'></script>
-    <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js'></script> -->
+    <script src='/js/lib/three.min.js'></script>
 		<script src='/js/lib/PointerLockControls.js'></script>
     <script src='/js/lib/socket.io.js'></script>
 
