added json validation library

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -266,7 +266,9 @@
     <script type='text/javascript' src='/js/client/interface.js'></script>
 		<script src='/js/client/buttons.js'></script>
 		<script src='/js/client/tooltips.js'></script>
-		<script src='/js/client/message.js'></script>
+    <script src='/js/client/message.js'></script>
+    
+		<script src='/js/lib/ajv.min.js'></script>
 
     <!-- Insert this line after script imports to fix electron import path for jquery -->
     <script>if (window.module) module = window.module;</script>
