--- a/views/index.ejs
+++ b/views/index.ejs
@@ -253,7 +253,8 @@
 		<script src='/js/client/VoxelMap.js'></script>
 		<script src='/js/client/CoordForm.js'></script>
 		<script src='/js/client/CutawayForm.js'></script>
-		<script src='/js/client/map.js'></script>
+    <script src='/js/client/map.js'></script>
+		<script src='/js/client/MapRender.js'></script>
 
     <script type='text/javascript' src='/js/client/fetchPromise.js'></script>
     <script type='text/javascript' src='/js/server/recipeSearch.js'></script>
@@ -264,6 +265,7 @@
 		<script src='/js/lib/bootstrap-select.min.js'></script>
 
     <script type='text/javascript' src='/js/client/interface.js'></script>
+    <script type='text/javascript' src='/js/client/GUI.js'></script>
 		<script src='/js/client/buttons.js'></script>
 		<script src='/js/client/tooltips.js'></script>
     <script src='/js/client/message.js'></script>
