game container class added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -270,7 +270,9 @@
 		<script src='/js/client/tooltips.js'></script>
     <script src='/js/client/message.js'></script>
     
-		<script src='/js/lib/ajv.min.js'></script>
+    <script src='/js/lib/ajv.min.js'></script>
+    
+		<script src='/js/client/Game.js'></script>
 
     <!-- Insert this line after script imports to fix electron import path for jquery -->
     <script>if (window.module) module = window.module;</script>
