--- a/views/index.ejs
+++ b/views/index.ejs
@@ -266,6 +266,7 @@
 
     <script type='text/javascript' src='/js/client/interface.js'></script>
     <script type='text/javascript' src='/js/client/GUI.js'></script>
+    <script type='text/javascript' src='/js/client/WebClient.js'></script>
 		<script src='/js/client/buttons.js'></script>
 		<script src='/js/client/tooltips.js'></script>
     <script src='/js/client/message.js'></script>
