refactoring inventory render

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -257,7 +257,7 @@
 
     <script type='text/javascript' src='/js/client/fetchPromise.js'></script>
     <script type='text/javascript' src='/js/server/recipeSearch.js'></script>
-    <script type='text/javascript' src='/js/client/Inventory.js'></script>
+    <script type='text/javascript' src='/js/client/InventoryRender.js'></script>
 
     <script src='/js/lib/jquery-3.1.1.min.js'></script>
 		<script src='/js/lib/bootstrap.min.js'></script>
