validators added, now to fix the errors they found

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -266,6 +266,7 @@
     <script type='text/javascript' src='/js/client/WebClient.js'></script>
     
     <script src='/js/lib/ajv.min.js'></script>
+    <script type='text/javascript' src='/js/shared/fromClientSchemas.js'></script>
     
     <script src='/js/client/Game.js'></script>
     
