fancy tooltips work on all the main GUI elements now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -197,15 +197,15 @@
         <div class='panel-body'>
           <div class="btn-group btn-group-justified">
 
-            <a class="btn btn-primary btn-xs" id='inventoryButton'>Inventory</a>
-            <a class="btn btn-primary btn-xs" id='scanButton'>Scan</a>
+            <a class="btn btn-primary btn-xs" id='inventoryButton'><div id='inventoryButtonTooltip'>Inventory</div></a>
+            <a class="btn btn-primary btn-xs" id='scanButton'><div id='scanButtonTooltip'>Scan</div></a>
 
           </div>
 
           <div class="btn-group btn-group-justified">
 
-            <a class="btn btn-primary btn-xs" id='equipButton'>Equip</a>
-            <a class="btn btn-primary btn-xs" id='centerButton'>Center</a>
+            <a class="btn btn-primary btn-xs" id='equipButton'><div id='equipButtonTooltip'>Equip</div></a>
+            <a class="btn btn-primary btn-xs" id='centerButton'><div id='centerButtonTooltip'>Center</div></a>
 
           </div>
         </div>
