--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,21 @@ body {
   left: 1%;
 }
 
+.itemStackNumber {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  /* text-shadow:
+    -1px -1px 1px #000,
+    1px -1px 1px #000,
+    -1px 1px 1px #000,
+    1px 1px 1px #000; */
+  background: rgba(0, 0, 0, .5);
+  border-radius: 50%;
+  width: 18px;
+  height: 18px; 
+}
+
 .coordinateInput {
   max-width: 100%;
   text-align: center;
@@ -108,6 +123,7 @@ body {
   cursor: pointer;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .hidden {
