--- a/views/index.ejs
+++ b/views/index.ejs
@@ -284,6 +284,10 @@
     
     <script src='/js/client/Game.js'></script>
     
+    <script src='/js/lib/react.production.min.js'></script>
+    <script src='/js/lib/react-dom.production.min.js'></script>
+
+    
     <script>
       GLOBALS = {};
       GLOBALS.game = new Game();
