--- a/views/index.ejs
+++ b/views/index.ejs
@@ -286,6 +286,7 @@
     
     <script src='/js/lib/react.production.min.js'></script>
     <script src='/js/lib/react-dom.production.min.js'></script>
+    <script src='/js/lib/react-bootstrap.min.js'></script>
 
     
     <script>
