web client now displays version number

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,11 @@
       <div class='panel panel-default inline-block'>
         <div class='panel-body information-panel'>
 
+          <div id='versionNumberDisplay'>
+            Version: 
+            <span id='versionNumber'></span>
+          </div>
+
           <div id='usernameDisplay'>
             User: 
             <%= user.username %>
