putting recipeSearch where it belongs it probably can't be a module since node needs it too

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -274,7 +274,7 @@
 		<script type='module' src='/js/client/CutawayForm.mjs'></script>
 		<script type='module' src='/js/client/MapRender.mjs'></script>
 
-    <script type='module' src='/js/server/recipeSearch.mjs'></script>
+    <script src='/js/shared/recipeSearch.js'></script>
     <script type='module' src='/js/client/InventoryRender.mjs'></script>
 
     <script src='/js/lib/jquery-3.1.1.min.js'></script>
