module refactor might be done now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -286,7 +286,7 @@
     <script type='module' src='/js/client/WebClient.mjs'></script>
     
     <script src='/js/lib/ajv.min.js'></script>
-    <script type='module' src='/js/shared/fromClientSchemas.mjs'></script>
+    <script src='/js/shared/fromClientSchemas.js'></script>
     
     <script type='module' src='/js/client/Game.mjs'></script>
     
