let's start by reactifying the info panel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -293,7 +293,8 @@
     <script src='/js/lib/react.production.min.js'></script>
     <script src='/js/lib/react-dom.production.min.js'></script>
     <script src='/js/lib/react-bootstrap.min.js'></script>
-
+    
+    <script type='module' src='/js/client/react/InfoPanel.mjs'></script>
     
     <script type='module'>
       import {Game} from '/js/client/Game.mjs';
