robots not controllable with web client right now it seems

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -290,11 +290,7 @@
     
     <script type='module' src='/js/client/Game.mjs'></script>
     
-    <script src='/js/lib/react.production.min.js'></script>
-    <script src='/js/lib/react-dom.production.min.js'></script>
-    <script src='/js/lib/react-bootstrap.min.js'></script>
-    
-    <script type='module' src='/js/client/react/InfoPanel.mjs'></script>
+    <!-- <script type='module' src='/js/client/react/InfoPanel.mjs'></script> -->
     
     <script type='module'>
       import {Game} from '/js/client/Game.mjs';
