--- a/views/index.ejs
+++ b/views/index.ejs
@@ -279,6 +279,7 @@
 		<script type='module' src='/js/client/CoordForm.mjs'></script>
 		<script type='module' src='/js/client/CutawayForm.mjs'></script>
 		<script type='module' src='/js/client/MapRender.mjs'></script>
+		<script type='module' src='/js/client/MenuMaker.mjs'></script>
 
     <script src='/js/shared/recipeSearch.js'></script>
     <script type='module' src='/js/client/InventoryRender.mjs'></script>
