as it turns out, esc is already used for releasing the pointer lock

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
           <table class="table modal-body">
             <tr><th>Function</th><th>Primary Key</th><th>Alternate Key</tr>
             <tr><td>Show/Hide Controls</td><td>?</td><td>Shift + /</tr>
+            <tr><td>Show/Hide Menu</td><td>x</td><td></tr>
             <tr><td>Lower Cursor</td><td>Ctrl</td><td>Alt</td></tr>
             <tr><td>Pan Camera</td><td>WASD</td><td>↑↓←→</td></tr>
             <tr><td>Raise Camera</td><td>Space</td><td></td></tr>
